# forest-analyzer

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yaml  pull-request.yaml
app/: config.py  main.py
app/tabs/: __init__.py  area.py  distance.py  intro.py  playground.py  tables.py  tree.py
app/utils/: __init__.py  common.py  context.py  db.py  engine.py  index.py  llm.py  query.py  view.py
nbs/: 00-spatialite-test.ipynb  01-openai-query-generation-test.ipynb  02-postgis-test.ipynb  03-llama-index.ipynb  04-openai-test.ipynb  04-wikipedia-agent.ipynb  05-plotly-test.ipynb  06-cut-down-data.ipynb  07-segment-geospatial.ipynb  geojson_layer.html  temp-plot.html
